fix(port-tems) : mobile version goes out of size

--- a/src/index.html
+++ b/src/index.html
@@ -40,9 +40,7 @@
               </div>
 
               <div>
-                <div
-                  class="d-flex flex-row text-white align-items-stretch text-center"
-                >
+                <div class="d-flex flex-row text-white text-center">
                   <div class="port-item p-4 bg-primary">
                     <i class="fa fa-home d-block"></i>Home
                   </div>
