--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
                 <div
                   class="name d-flex flex-row justify-content-between align-items-center"
                 >
-                  <h1 class="diplay-4">Tornike Tabatadze</h1>
+                  <h1 class="diplay-4">Saba Shavidze</h1>
                   <div>
                     <i class="fa fa-twitter"></i>
                   </div>
@@ -36,12 +36,16 @@
               </div>
 
               <div class="p-4 bg-black">
-                Experienced Movies Composer
+                Software Engineer
               </div>
 
               <div>
                 <div class="d-flex flex-row text-white text-center">
-                  <div class="port-item p-4 bg-primary">
+                  <div
+                    class="port-item p-4 bg-primary"
+                    data-toggle="collapse"
+                    data-target="#home"
+                  >
                     <i class="fa fa-home d-block"></i>Home
                   </div>
                   <div class="port-item p-4 bg-success">
@@ -59,8 +63,94 @@
           </div>
         </div>
       </header>
+      <!-- HOME -->
+      <div id="home" class="collapse show">
+        <div class="card card-body bg-primary text-white py-5">
+          <h2>Welcom To My Page</h2>
+          <p class="lead">
+            It is a long established fact that a reader will be distracted by
+            the readable content of a page when looking at its layout. The point
+            of using Lorem Ipsum is that it has a more-or-less normal
+            distribution of letters, as opposed.
+          </p>
+        </div>
+        <div class="card card-body py-5">
+          <h3>My Skills</h3>
+          <p>
+            It is a long established fact that a reader will be distracted by
+            the readable content of a page when looking at its layout. The point
+            of using Lorem Ipsum is that it has a more-or-less normal
+            distribution of letters, as opposed.
+          </p>
+          <hr />
+          <h4>HTML 100%</h4>
+          <div class="progress mb-3">
+            <div
+              class="progress-bar bg-success"
+              style="width: 100%"
+              role="progressbar"
+              aria-valuenow="100"
+              aria-valuemin="0"
+              aria-valuemax="100"
+            ></div>
+          </div>
+          <h4>CSS 100%</h4>
+          <div class="progress mb-3">
+            <div
+              class="progress-bar bg-success"
+              style="width: 100%"
+              role="progressbar"
+              aria-valuenow="100"
+              aria-valuemin="0"
+              aria-valuemax="100"
+            ></div>
+          </div>
+          <h4>Javascript 90%</h4>
+          <div class="progress mb-3">
+            <div
+              class="progress-bar bg-success"
+              style="width: 90%"
+              role="progressbar"
+              aria-valuenow="90"
+              aria-valuemin="0"
+              aria-valuemax="100"
+            ></div>
+          </div>
+          <h4>ReactJS 80%</h4>
+          <div class="progress mb-3">
+            <div
+              class="progress-bar bg-success"
+              style="width: 80%"
+              role="progressbar"
+              aria-valuenow="90"
+              aria-valuemin="0"
+              aria-valuemax="100"
+            ></div>
+          </div>
+          <h4>.Net 60%</h4>
+          <div class="progress mb-3">
+            <div
+              class="progress-bar bg-success"
+              style="width: 60%"
+              role="progressbar"
+              aria-valuenow="60"
+              aria-valuemin="0"
+              aria-valuemax="100"
+            ></div>
+          </div>
+        </div>
+      </div>
+      <footer class="p-5 bg-dark text-white" id="main-footer">
+        <div class="row">
+          <div class="col-md-6">
+            <a href="#" class="btn btn-outline-light">
+              <i class="fa fa-cloud"></i>
+              <span>Download Resume</span>
+            </a>
+          </div>
+        </div>
+      </footer>
     </div>
-    <div></div>
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
