--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="css/font-awesome.min.css" />
     <link rel="stylesheet" href="css/bootstrap.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/popper.min.js"></script>
+    <script src="js/main.js"></script>
   </head>
   <body>
     <div class="contaier">
@@ -48,7 +52,11 @@
                   >
                     <i class="fa fa-home d-block"></i>Home
                   </div>
-                  <div class="port-item p-4 bg-success">
+                  <div
+                    class="port-item p-4 bg-success"
+                    data-toggle="collapse"
+                    data-target="#resume"
+                  >
                     <i class="fa fa-graduation-cap d-block"></i>Resume
                   </div>
                   <div class="port-item p-4 bg-warning">
@@ -140,6 +148,88 @@
           </div>
         </div>
       </div>
+
+      <!-- Resume -->
+      <div class="collapse" id="resume">
+        <div class="card card-body bg-success text-white py-5">
+          <h2>My Resume</h2>
+          <p>
+            It is a long established fact that a reader will be distracted by
+            the readable content of a page when looking at its layout. The point
+            of using Lorem Ipsum is that it has a more-or-less normal
+            distribution of letters, as opposed.
+          </p>
+        </div>
+
+        <div class="card card-body  py-5">
+          <h3>Where have I worked?</h3>
+          <p>
+            It is a long established fact that a reader will be distracted by
+            the readable content of a page when looking at its layout. The point
+            of using Lorem Ipsum is that it has a more-or-less normal
+            distribution of letters, as opposed.
+          </p>
+          <div class="card-deck">
+            <div class="card">
+              <div class="card-body">
+                <h4 class="card-title">DevMasters</h4>
+                <p class="cart-text">
+                  It is a long established fact that a reader will be distracted
+                  by the readable
+                </p>
+                <p class="p-2 mb-3 bg-dark text-white">
+                  Position:Full Stack Developer
+                </p>
+                <p class="p-2 mb-3 bg-dark text-white">
+                  Phone:577595668
+                </p>
+              </div>
+              <div class="card-footer">
+                <h6 class="text-muted">Dates: 2015 - 2017</h6>
+              </div>
+            </div>
+
+            <div class="card">
+              <div class="card-body">
+                <h4 class="card-title">DevMasters</h4>
+                <p class="cart-text">
+                  It is a long established fact that a reader will be distracted
+                  by the readable
+                </p>
+                <p class="p-2 mb-3 bg-dark text-white">
+                  Position:Full Stack Developer
+                </p>
+                <p class="p-2 mb-3 bg-dark text-white">
+                  Phone:577595668
+                </p>
+              </div>
+              <div class="card-footer">
+                <h6 class="text-muted">Dates: 2015 - 2017</h6>
+              </div>
+            </div>
+
+            <div class="card">
+              <div class="card-body">
+                <h4 class="card-title">DevMasters</h4>
+                <p class="cart-text">
+                  It is a long established fact that a reader will be distracted
+                  by the readable
+                </p>
+                <p class="p-2 mb-3 bg-dark text-white">
+                  Position:Full Stack Developer
+                </p>
+                <p class="p-2 mb-3 bg-dark text-white">
+                  Phone:577595668
+                </p>
+              </div>
+              <div class="card-footer">
+                <h6 class="text-muted">Dates: 2015 - 2017</h6>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Footer -->
       <footer class="p-5 bg-dark text-white" id="main-footer">
         <div class="row">
           <div class="col-md-6">
