Added Section: Work

--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,16 @@
     <title>Bootstrap 4 Starter Pack</title>
     <link rel="stylesheet" href="css/font-awesome.min.css" />
     <link rel="stylesheet" href="css/bootstrap.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css"
+    />
+
     <link rel="stylesheet" href="css/style.css" />
-    <script src="js/bootstrap.min.js"></script>
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
     <script src="js/main.js"></script>
   </head>
   <body>
@@ -59,7 +65,11 @@
                   >
                     <i class="fa fa-graduation-cap d-block"></i>Resume
                   </div>
-                  <div class="port-item p-4 bg-warning">
+                  <div
+                    class="port-item p-4 bg-warning"
+                    data-toggle="collapse"
+                    data-target="#work"
+                  >
                     <i class="fa fa-folder-open d-block"></i>Work
                   </div>
                   <div class="port-item p-4 bg-danger">
@@ -225,6 +235,122 @@
               <div class="card-footer">
                 <h6 class="text-muted">Dates: 2015 - 2017</h6>
               </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Work -->
+      <div class="collapse" id="work">
+        <div class="card card-body bg-warning py-5">
+          <h3>My Portfolio</h3>
+          <p>
+            It is a long established fact that a reader will be distracted by
+            the readable content of a page
+          </p>
+        </div>
+        <div class="card card-body py-5">
+          <h3>What have I built?</h3>
+          <p>
+            It is a long established fact that a reader will be distracted by
+            the readable content of a page
+          </p>
+          <div class="row no-gutters d-flex justify-content-between flex-wrap">
+            <div class="col-md-3 p-2">
+              <a
+                href="http://unsplash.it/1900.jpg?image=251"
+                data-fancybox="gallery"
+                data-width="1200"
+              >
+                <img
+                  src="http://unsplash.it/600.jpg?image=251"
+                  alt=""
+                  class="img-fluid"
+              /></a>
+            </div>
+            <div class="col-md-3 p-2">
+              <a
+                href="http://unsplash.it/1900.jpg?image=252"
+                data-fancybox="gallery"
+                data-width="1200"
+              >
+                <img
+                  src="http://unsplash.it/600.jpg?image=252"
+                  alt=""
+                  class="img-fluid"
+              /></a>
+            </div>
+            <div class="col-md-3 p-2">
+              <a
+                href="http://unsplash.it/1900.jpg?image=253"
+                data-fancybox="gallery"
+                data-width="1200"
+              >
+                <img
+                  src="http://unsplash.it/600.jpg?image=253"
+                  alt=""
+                  class="img-fluid"
+              /></a>
+            </div>
+            <div class="col-md-3 p-2">
+              <a
+                href="http://unsplash.it/1200.jpg?image=254"
+                data-fancybox="gallery"
+                data-width="1200"
+              >
+                <img
+                  src="http://unsplash.it/600.jpg?image=254"
+                  alt=""
+                  class="img-fluid"
+              /></a>
+            </div>
+            <div class="col-md-3 p-2">
+              <a
+                href="http://unsplash.it/1200.jpg?image=255"
+                data-fancybox="gallery"
+                data-width="1200"
+              >
+                <img
+                  src="http://unsplash.it/600.jpg?image=255"
+                  alt=""
+                  class="img-fluid"
+              /></a>
+            </div>
+            <div class="col-md-3 p-2">
+              <a
+                href="http://unsplash.it/1200.jpg?image=256"
+                data-fancybox="gallery"
+                data-width="1200"
+              >
+                <img
+                  src="http://unsplash.it/600.jpg?image=256"
+                  alt=""
+                  class="img-fluid"
+              /></a>
+            </div>
+            <div class="col-md-3 p-2">
+              <a
+                href="http://unsplash.it/1200.jpg?image=257"
+                data-fancybox="gallery"
+                data-width="1200"
+              >
+                <img
+                  src="http://unsplash.it/600.jpg?image=257"
+                  alt=""
+                  class="img-fluid"
+              /></a>
+            </div>
+            <div class="col-md-3 p-2">
+              <a
+                href="http://unsplash.it/1200.jpg?image=258"
+                data-fancybox="gallery"
+                data-width="1200"
+              >
+                <img
+                  src="http://unsplash.it/600.jpg?image=258"
+                  alt=""
+                  class="img-fluid"
+              /></a>
             </div>
           </div>
         </div>
